# promtail_cleaner

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yml  renovate.json5
.github/: release-drafter.yml
.github/workflows/: main_on_branch_main.yml  reusable_get_software_version.yml  reusable_push_image.yml
mock/: config.yml
src/: main.rs
src/promtail/: config.rs  position.rs
