[package]
name = "promtail_cleaner"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.95"
log = "0.4.11"
env_logger = "0.11.0"
tokio = { version = "1.17.0", features = ["full", "signal", "tracing"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
